# forcasting

./: .gitignore  README.md  pyproject.toml
.playwright-cli/: page-2026-03-19T17-39-04-754Z.yml  page-2026-03-19T17-39-51-007Z.yml  page-2026-03-19T17-41-22-718Z.yml  page-2026-03-19T17-59-33-801Z.yml
app/: streamlit_app.py
data/raw/: restaurant_inventory_100days.csv
data/reference/: recipe_mapping.csv  supplier_contacts.csv
docs/: Capstone_Project_Proposal Zahra Putri.docx  capstone_scope.md
output/forecast/: historical_ingredient_usage.csv  ingredient_forecast.csv  inventory_alerts.csv  menu_item_forecast.csv  supplier_order_drafts.csv  supplier_reorders.csv
scripts/: run_capstone_pipeline.py
src/restaurant_forecasting/: __init__.py  config.py  data_loader.py  forecasting.py  inventory.py  pipeline.py
src/restaurant_forecasting_capstone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
