[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-forecasting-capstone"
version = "0.1.0"
description = "AI-driven restaurant inventory forecasting and reorder decision support prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "altair>=5.4.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "streamlit>=1.43.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
